lang/tooling/fol-editor/tree-sitter/test/corpus/expressions.txt
==================
Chained Call Statements
==================

fun demo(): non = {
    tool.first("a").second("b");
    make().read();
};

---

(source_file
  (fun_decl
    (plain_fun_decl
      (identifier)
      (params)
      (return_type
        (type_expr
          (identifier)))
      (block
        (stmt
          (expr
            (expr_atom
              (call_expr
                (field_access
                  (call_expr
                    (field_access
                      (identifier)
                      (identifier))
                    (call_arg
                      (expr
                        (expr_atom
                          (string_literal)))))
                  (identifier))
                (call_arg
                  (expr
                    (expr_atom
                      (string_literal))))))))
        (stmt
          (expr
            (expr_atom
              (call_expr
                (field_access
                  (call_expr
                    (identifier))
                  (identifier))))))))))

==================
Expressions
==================

fun demo(flag: bol, items: seq[int]): int = {
    var value: int = .len(items);
    var logic: bol = flag and not false;
    var typed: int = value as int;
    var tagged: bol = value is 1;
    var member: bol = value in items;
    var pipe: bol = flag or false xor true nand false nor false;
    var pow: int = value ^ 2;
    var full_range = value..10;
    var callback = fun[](item: int)[value]: int = => item + value;
    var first: int = items[0];
    var explicit: int = pick::[int](42);
    [>]worker();
    when(flag) {
        case(true) { return .echo(value); }
        * { return 0; }
    }
    loop(flag) {
        break;
    }
};

---

(source_file
  (fun_decl
    (plain_fun_decl
      (identifier)
      (params
        (param
          (identifier)
          (type_expr
            (identifier)))
        (param
          (identifier)
          (type_expr
            (container_type
              (type_expr
                (identifier))))))
      (return_type
        (type_expr
          (identifier)))
      (block
        (stmt
          (var_decl
            (typed_binding
              (identifier)
              (type_expr
                (identifier)))
            (expr
              (expr_atom
                (dot_intrinsic
                  (identifier)
                  (expr
                    (expr_atom
                      (identifier))))))))
        (stmt
          (var_decl
            (typed_binding
              (identifier)
              (type_expr
                (identifier)))
            (expr
              (binary_expr
                (expr_atom
                  (identifier))
                (expr
                  (unary_expr
                    (expr_atom
                      (boolean_literal))))))))
        (stmt
          (var_decl
            (typed_binding
              (identifier)
              (type_expr
                (identifier)))
            (expr
              (binary_expr
                (expr_atom
                  (identifier))
                (expr
                  (expr_atom
                    (identifier)))))))
        (stmt
          (var_decl
            (typed_binding
              (identifier)
              (type_expr
                (identifier)))
            (expr
              (binary_expr
                (expr_atom
                  (identifier))
                (expr
                  (expr_atom
                    (integer_literal)))))))
        (stmt
          (var_decl
            (typed_binding
              (identifier)
              (type_expr
                (identifier)))
            (expr
              (binary_expr
                (expr_atom
                  (identifier))
                (expr
                  (expr_atom
                    (identifier)))))))
        (stmt
          (var_decl
            (typed_binding
              (identifier)
              (type_expr
                (identifier)))
            (expr
              (binary_expr
                (expr_atom
                  (identifier))
                (expr
                  (binary_expr
                    (expr_atom
                      (boolean_literal))
                    (expr
                      (binary_expr
                        (expr_atom
                          (boolean_literal))
                        (expr
                          (binary_expr
                            (expr_atom
                              (boolean_literal))
                            (expr
                              (expr_atom
                                (boolean_literal)))))))))))))
        (stmt
          (var_decl
            (typed_binding
              (identifier)
              (type_expr
                (identifier)))
            (expr
              (binary_expr
                (expr_atom
                  (identifier))
                (expr
                  (expr_atom
                    (integer_literal)))))))
        (stmt
          (var_decl
            (typed_binding
              (identifier))
            (expr
              (range_expr
                (expr_atom
                  (identifier))
                (expr
                  (expr_atom
                    (integer_literal)))))))
        (stmt
          (var_decl
            (typed_binding
              (identifier))
            (expr
              (anonymous_fun_expr
                (decl_modifiers)
                (params
                  (param
                    (identifier)
                    (type_expr
                      (identifier))))
                (routine_capture_list
                  (routine_capture
                    (identifier)))
                (return_type
                  (type_expr
                    (identifier)))
                (routine_body_expr
                  (stmt
                    (expr
                      (binary_expr
                        (expr_atom
                          (identifier))
                        (expr
                          (expr_atom
                            (identifier)))))))))))
        (stmt
          (var_decl
            (typed_binding
              (identifier)
              (type_expr
                (identifier)))
            (expr
              (expr_atom
                (index_access
                  (identifier)
                  (expr
                    (expr_atom
                      (integer_literal))))))))
        (stmt
          (var_decl
            (typed_binding
              (identifier)
              (type_expr
                (identifier)))
            (expr
              (expr_atom
                (call_expr
                  (identifier)
                  (turbofish_type_args
                    (type_expr
                      (identifier)))
                  (call_arg
                    (expr
                      (expr_atom
                        (integer_literal)))))))))
        (stmt
          (expr
            (spawn_expr
              (expr_atom
                (call_expr
                  (identifier))))))
        (stmt
          (when_expr
            (expr
              (expr_atom
                (identifier)))
            (when_block
              (case_clause
                (expr
                  (expr_atom
                    (boolean_literal)))
                (block
                  (stmt
                    (return_stmt
                      (expr
                        (expr_atom
                          (dot_intrinsic
                            (identifier)
                            (expr
                              (expr_atom
                                (identifier))))))))))
              (default_clause
                (block
                  (stmt
                    (return_stmt
                      (expr
                        (expr_atom
                          (integer_literal))))))))))
        (expr
          (loop_expr
            (expr
              (expr_atom
                (identifier)))
            (block
              (stmt
                (break_stmt)))))))))

==================
Slice Access Bounds
==================

fun demo(): non = {
    var a: seq[int] = items[1:4];
    var b: seq[int] = items[1:];
    var c: seq[int] = items[:4];
    var d: seq[int] = items[:];
    var e: int = items[1];
};

---

(source_file
  (fun_decl
    (plain_fun_decl
      (identifier)
      (params)
      (return_type
        (type_expr
          (identifier)))
      (block
        (stmt
          (var_decl
            (typed_binding
              (identifier)
              (type_expr
                (container_type
                  (type_expr
                    (identifier)))))
            (expr
              (expr_atom
                (slice_access
                  (identifier)
                  (expr
                    (expr_atom
                      (integer_literal)))
                  (expr
                    (expr_atom
                      (integer_literal))))))))
        (stmt
          (var_decl
            (typed_binding
              (identifier)
              (type_expr
                (container_type
                  (type_expr
                    (identifier)))))
            (expr
              (expr_atom
                (slice_access
                  (identifier)
                  (expr
                    (expr_atom
                      (integer_literal))))))))
        (stmt
          (var_decl
            (typed_binding
              (identifier)
              (type_expr
                (container_type
                  (type_expr
                    (identifier)))))
            (expr
              (expr_atom
                (slice_access
                  (identifier)
                  (expr
                    (expr_atom
                      (integer_literal))))))))
        (stmt
          (var_decl
            (typed_binding
              (identifier)
              (type_expr
                (container_type
                  (type_expr
                    (identifier)))))
            (expr
              (expr_atom
                (slice_access
                  (identifier))))))
        (stmt
          (var_decl
            (typed_binding
              (identifier)
              (type_expr
                (identifier)))
            (expr
              (expr_atom
                (index_access
                  (identifier)
                  (expr
                    (expr_atom
                      (integer_literal))))))))))))
