lang/tooling/fol-editor/tree-sitter/test/corpus/v3_channels_select_mutex.txt
==================
V3 Channels Select Mutex
==================

typ Counter: rec = {
    value: int,
};

fun[] worker(counter[mux]: Counter): int = {
    counter.lock();
    counter.value = counter.value + 1;
    counter.unlock();
    return counter.value;
};

fun[] channels(first: chn[int], second: chn[int], counter[mux]: Counter): int = {
    [>]worker(counter);
    [>]fun()[first[tx]] = {
        1 | first[tx];
    };
    var[mut] result: int = 0;
    select {
        when first as value {
            result = value;
        }
        when second as value {
            result = value;
        }
        * {
            result = result;
        }
    };
    return result;
};

---

(source_file
  (typ_decl
    (identifier)
    (record_type)
    (type_block
      (record_field
        (typed_binding
          (identifier)
          (type_expr
            (identifier))))))
  (fun_decl
    (decl_modifiers)
    (plain_fun_decl
      (identifier)
      (params
        (param
          (identifier)
          (parameter_options)
          (type_expr
            (identifier))))
      (return_type
        (type_expr
          (identifier)))
      (block
        (stmt
          (expr
            (expr_atom
              (call_expr
                (field_access
                  (identifier)
                  (identifier))))))
        (stmt
          (assignment_stmt
            (field_access
              (identifier)
              (identifier))
            (expr
              (binary_expr
                (expr_atom
                  (field_access
                    (identifier)
                    (identifier)))
                (expr
                  (expr_atom
                    (integer_literal)))))))
        (stmt
          (expr
            (expr_atom
              (call_expr
                (field_access
                  (identifier)
                  (identifier))))))
        (stmt
          (return_stmt
            (expr
              (expr_atom
                (field_access
                  (identifier)
                  (identifier)))))))))
  (fun_decl
    (decl_modifiers)
    (plain_fun_decl
      (identifier)
      (params
        (param
          (identifier)
          (type_expr
            (channel_type
              (type_expr
                (identifier)))))
        (param
          (identifier)
          (type_expr
            (channel_type
              (type_expr
                (identifier)))))
        (param
          (identifier)
          (parameter_options)
          (type_expr
            (identifier))))
      (return_type
        (type_expr
          (identifier)))
      (block
        (stmt
          (expr
            (spawn_expr
              (expr_atom
                (call_expr
                  (identifier)
                  (call_arg
                    (expr
                      (expr_atom
                        (identifier)))))))))
        (stmt
          (expr
            (spawn_expr
              (expr_atom
                (anonymous_fun_expr
                  (params)
                  (routine_capture_list
                    (routine_capture
                      (identifier)))
                  (routine_body_expr
                    (block
                      (stmt
                        (expr
                          (pipe_expr
                            (expr_atom
                              (integer_literal))
                            (expr
                              (expr_atom
                                (channel_access
                                  (identifier))))))))))))))
        (stmt
          (var_decl
            (decl_modifiers
              (modifier_list
                (identifier)))
            (typed_binding
              (identifier)
              (type_expr
                (identifier)))
            (expr
              (expr_atom
                (integer_literal)))))
        (stmt
          (select_stmt
            (select_block
              (select_arm
                (identifier)
                (identifier)
                (block
                  (stmt
                    (assignment_stmt
                      (identifier)
                      (expr
                        (expr_atom
                          (identifier)))))))
              (select_arm
                (identifier)
                (identifier)
                (block
                  (stmt
                    (assignment_stmt
                      (identifier)
                      (expr
                        (expr_atom
                          (identifier)))))))
              (select_default_arm
                (block
                  (stmt
                    (assignment_stmt
                      (identifier)
                      (expr
                        (expr_atom
                          (identifier))))))))))
        (stmt
          (return_stmt
            (expr
              (expr_atom
                (identifier)))))))))

==================
V3 Empty Select Syntax
==================

fun[] main(): int = {
    select {};
    return 0;
};

---

(source_file
  (fun_decl
    (decl_modifiers)
    (plain_fun_decl
      (identifier)
      (params)
      (return_type
        (type_expr
          (identifier)))
      (block
        (stmt
          (select_stmt
            (select_block)))
        (stmt
          (return_stmt
            (expr
              (expr_atom
                (integer_literal)))))))))
